gfs: add checksum/version propagation, minimal LeaseManager and metadata persistence